<resources>
    <string name="app_name">DangerousQuiz</string>

    // Main Activity
    <string name="playername">playerName</string>
    <string name="playerscore">playerScore</string>
    <string name="best_scores">Best Scores :</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Player Score</string>
    <string name="welcome_what_s_your_name">Welcome! What\'s your name?</string>
    <string name="please_type_your_name">Please type your name</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="best_score">Best Scores</string>
    <string name="top_quiz">TOP QUIZ</string>
    <string name="quizname">QuizName</string>
    <string name="quiztheme">QuizTheme</string>
    <string name="questionlist">QuestionList</string>
    <string name="quizcreatorid">QuizCreatorId</string>
    <string name="quizid">QuizId</string>

    // Sign In
    <string name="sign_out">Sign out</string>
    <string name="disconnexion">Deconnexion...</string>

    // GameActivity
    <string name="questionModel">Question?</string>
    <string name="answer1">ANSWER 1</string>
    <string name="answer2">ANSWER 2</string>
    <string name="answer3">ANSWER 3</string>
    <string name="answer4">ANSWER 4</string>

    // Drawer Menu
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="play">Play</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_quiz">Create your Quiz</string>
    <string name="error_email_badly_formated">Format de l\'email non valide</string>
    <string name="error_too_short_password">Mot de passe trop court (minimum 6 caractères).</string>

    // Create Account
    <string name="registration_in_progress">Registration in progress...</string>
    <string name="add_questionmodel_1">Add first question</string>
    <string name="add_questionmodel_2">Add second question</string>
    <string name="add_questionmodel_3">Add third question</string>
    <string name="add_questionmodel_4">Add fourth question</string>
    <string name="create_the_quiz">Create your quiz!</string>
    <string name="choose_your_quiz_name">Choose your quiz name :</string>
    <string name="choose_your_quiz_theme">Choose your quiz theme :</string>
    <string name="choose_your_quiz_difficulty">Choose your quiz difficulty :</string>
    <string name="add_your_quiz_questions">Add your quiz questions :</string>

    // Create Quiz
    <string-array name="answer_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="quiz_theme">
        <item>History</item>
        <item>Music</item>
        <item>Sport</item>
        <item>Science</item>
        <item>Art</item>
        <item>Cinema</item>
        <item>Geography</item>
        <item>Nature</item>
        <item>News</item>
        <item>People</item>
        <item>Other</item>
    </string-array>
    <string-array name="quiz_difficulty">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advance</item>
    </string-array>
    <string name="quiz_creation">Quiz creation...</string>
    <string name="quiz_question_added">Question added!</string>
    <string name="quiz_created">Quiz created!</string>
    <string name="quiz_not_created">Quiz not created!</string>
    <string name="add_your_question_here">Add your question here!</string>
    <string name="first_answer">First answer</string>
    <string name="fourth_answer">Fourth answer</string>
    <string name="third_answer">Third answer</string>
    <string name="second_answer">Second answer</string>
    <string name="confirm">Confirm</string>
    <string name="next_quiz">Next\nquiz</string>
    <string name="play_this_quiz">Play\nquiz</string>
    <string name="profile">Profile</string>
    <string name="your_stats">Your stats :</string>
    <string name="quiz_name">Quiz\nName</string>
    <string name="quiz_theme">Quiz\nTheme</string>
    <string name="quiz_themes">Quiz themes :</string>
    <string name="quiz_names">Quiz names :</string>
    <string name="your_quiz">Quiz you have done :</string>
    <string name="your_score">Your score :</string>
    <string name="quiz_level">Quiz Level</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="quiz_created_by">Quiz created by :</string>
    <string name="creator_name">Creator name</string>
    <string name="creator_score">Creator score</string>


</resources>
