<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewQuizName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/quizname"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textViewQuizTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quiztheme"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textViewQuizDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quizcreatorid"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textViewQuizQuestionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/questionlist"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textViewQuizCreatorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quizcreatorid"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/quiz_created_by"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageViewQuizCreatorAvatar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/avatar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewQuizCreatorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/creator_name"/>

                <TextView
                    android:id="@+id/textViewQuizCreatorScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/creator_score"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewLeftSwipe"
        android:layout_width="192dp"
        android:layout_height="match_parent"
        android:alpha="0"
        android:scaleType="fitCenter"
        android:src="@drawable/cross_red"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/imageViewRightSwipe"
        android:layout_width="192dp"
        android:layout_height="match_parent"
        android:alpha="0"
        android:scaleType="fitCenter"
        android:src="@drawable/check_green"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</android.support.v7.widget.CardView>