<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.dangerousquiz.Activities.PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewGameQuestion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textColor="@color/darkBlue"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/questionModel"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAnswer1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_margin="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textViewCard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/answer1"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAnswer2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_margin="5dp"
            android:background="@color/white"
            app:cardPreventCornerOverlap="false"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textViewCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/answer2"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAnswer3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            app:cardPreventCornerOverlap="false"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textViewCard3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/answer3"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAnswer4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            app:cardPreventCornerOverlap="false"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textViewCard4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/answer4"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
