<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="fr.wcs.dangerousquiz.Activities.CreateQuizFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/choose_your_quiz_name"/>

            <EditText
                android:id="@+id/editTextQuizName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColorHint="@color/colorPrimary"
                android:layout_margin="10dp"
                android:hint="@string/quizname"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/choose_your_quiz_theme"/>

            <Spinner
                android:id="@+id/spinnerQuizTheme"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/choose_your_quiz_difficulty"/>

            <Spinner
                android:id="@+id/spinnerQuizDifficulty"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/add_your_quiz_questions"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewQuestion1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_margin="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textViewCard1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:text="@string/add_questionmodel_1"/>

                    <ImageView
                        android:id="@+id/imageViewCard1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/check_green"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewQuestion2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="false"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textViewCard2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:text="@string/add_questionmodel_2"/>

                    <ImageView
                        android:id="@+id/imageViewCard2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/check_green"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewQuestion3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textViewCard3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:text="@string/add_questionmodel_3"/>

                    <ImageView
                        android:id="@+id/imageViewCard3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/check_green"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewQuestion4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:clickable="true"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textViewCard4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:text="@string/add_questionmodel_4"/>

                    <ImageView
                        android:id="@+id/imageViewCard4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/check_green"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/buttonCreateQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="4dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_background"
                android:text="@string/create_the_quiz"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
