<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.dangerousquiz.Activities.ScoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best_scores"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textColor="@color/darkBlue"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_name"
                android:layout_gravity="center"
                android:textColor="@color/darkBlue"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/imageButtonNameFilter"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1.7"
                android:background="@drawable/ic_filter"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_score"
                android:layout_gravity="center"
                android:textColor="@color/darkBlue"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/imageButtonScoreFilter"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1.7"
                android:background="@drawable/ic_filter"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewBestScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

    </LinearLayout>

</FrameLayout>
