<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:clipToPadding="false">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="false"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageViewCreator"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/avatar"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewQuizName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:hint="@string/quiz_name"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewQuizTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:hint="@string/quiz_theme"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewQuizDifficulty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:hint="@string/quiz_level"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>